--- a/symfony/.env
+++ b/symfony/.env
@@ -26,7 +26,7 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://root:Afpa1234@db:3306/VillageGreen?serverVersion=10.11.8-MariaDB&charset=utf8mb4"
-  DATABASE_URL="mysql://root:Afpa1234@db:3306/VillageGreen"
+  DATABASE_URL="mysql://root:Afpa1234@db:3306/VillageGreen?serverVersion=11.6.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
